istio/istio-config/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: round-robin-frontend-gateway
  namespace: playground
spec:
  hosts:
  - "round-robin-playground.hijup.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: frontend.playground.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-frontend-gateway
  namespace: playground
spec:
  hosts:
  - "always-canary-playground.hijup.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: frontend.playground.svc.cluster.local
        subset: v1-canary
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: percentage-frontend-gateway
  namespace: playground
spec:
  hosts:
  - "percentage-playground.hijup.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: frontend.playground.svc.cluster.local
        subset: v1-canary
      weight: 10
    - destination:
        host: frontend.playground.svc.cluster.local
        subset: v1
      weight: 90
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: header-frontend-gateway
  namespace: playground
spec:
  hosts:
  - "header-playground.hijup.com"
  gateways:
  - default-gateway
  http:
  - match:
    - headers:
        canary:
          exact: "true"
    route:
    - destination:
        host: frontend.playground.svc.cluster.local
        subset: v1-canary
  - route:
    - destination:
        host: frontend.playground.svc.cluster.local
        subset: v1
